--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,9 +1,70 @@
+*{margin:0px; padding:0px;}
+/*
+Purpose of this line it allow the background to extend throughout the whole page
+When only applied this padding rule to the body there was still an issue with the margin around the top by default
+*/
 #content {
-  margin-left: auto;
-  margin-right: auto;
-  width: 650px;
+  width: 100%;
+  height:100vh;
+  background-color:orange;
 }
 
 #greeting-container {
   margin-top: 20px;
+}
+#midTile {
+  position:relative;
+  text-align:center;
+  left:25%;
+  width:50%;
+  height:50vh;
+  background-color:teal;
+}
+
+.tile {
+  float:left;
+  width: 23%;
+  height: 23%;
+  padding:1%;
+  background-clip:content-box; 
+  /*this handy line makes sure that padding is not 
+  also colored by the background color*/ 
+  background-color:yellow; 
+
+}
+
+.tileInner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.tile:hover .tileInner{
+  transform: rotateX(180deg);
+}
+
+.tileFront, .tileBack {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.tileFront {
+  /*background-color: #bbb;*/
+  /*color: black;*/
+}
+
+.tileBack {
+  /*background-color: #2980b9;
+  color: white;*/
+  transform: rotateX(180deg);
+}
+.Title{
+  font-size:1.8vw; 
 }
