--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -51,7 +51,7 @@ textarea:focus {
 #prior-comments {
   width: 80%;
   height: 20%;
-  background-color: rgba(0, 128, 128, .4);
+  background-color: rgba(0, 128, 128, .8);
   margin-left: 10%;
   margin-top: 1%;
   border: .1px lightgray;
@@ -213,10 +213,6 @@ ul {
   font-size: .8vw;
 }
 
-.comment-body {
-  font-size: 1.4vw;
-}
-
 ::-webkit-scrollbar {
   display: none;
   background: transparent;
@@ -227,13 +223,13 @@ li {
 }
 
 .comment-body {
-  height: 2.5vh;
+  height: auto;
   font-size: 1vw;
 }
 
 .comment-body-form {
   font-size: .5vw;
-  height:2.5vh;
+  height: 2.5vh;
 }
 
 .user {
@@ -258,6 +254,27 @@ li {
   vertical-align: top;
 }
 
-#full-comment{
-  margin-top:.4%;
+#full-comment {
+  margin-top: .4%;
+}
+
+.btn {
+  padding: 3px;
+}
+
+.btn:hover {
+  background-color: gray;
+}
+
+.input-panel {
+  text-align: right;
+}
+
+#add-comment {
+  visibility: hidden;
+}
+
+#select-num-results {
+  width: 54px;
+  height: 22px;
 }
