Minor comment changes. Error handling. Small improvements.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -258,11 +258,11 @@ li {
   margin-top: .4%;
 }
 
-.btn {
+.button {
   padding: 3px;
 }
 
-.btn:hover {
+.button:hover {
   background-color: gray;
 }
 
